--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,7 +51,8 @@
         "cstdio": "c",
         "os_internal_arch.h": "c",
         "os_internal_cfg.h": "c",
-        "os_cfg.h": "c"
+        "os_cfg.h": "c",
+        "can.h": "c"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
